[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/settings.gd" type="Script" id=1]

[node name="Settings" type="Control"]
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 1, 1, 1, 0 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 150.0
margin_top = 25.0
margin_right = 590.0
margin_bottom = 211.0
color = Color( 0.262745, 0.152941, 0.309804, 1 )

[node name="TitleLabel" type="Label" parent="."]
margin_left = 297.0
margin_top = 35.0
margin_right = 357.0
margin_bottom = 49.0
text = "SETTINGS"

[node name="GridNames" type="GridContainer" parent="."]
margin_left = 170.0
margin_top = 78.0
margin_right = 353.0
margin_bottom = 191.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 8
custom_constants/hseparation = 5
columns = 2

[node name="FullscreenLabel" type="Label" parent="GridNames"]
margin_top = 5.0
margin_right = 101.0
margin_bottom = 19.0
text = "Fullscreen (F11)"

[node name="FullscreenCheckBox" type="CheckBox" parent="GridNames"]
margin_left = 106.0
margin_right = 130.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridAudio" type="GridContainer" parent="."]
margin_left = 379.0
margin_top = 80.0
margin_right = 545.0
margin_bottom = 193.0
rect_min_size = Vector2( 120, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 2
custom_constants/hseparation = 5
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundLabel" type="Label" parent="GridAudio"]
margin_top = 1.0
margin_right = 39.0
margin_bottom = 15.0
text = "Sound"

[node name="HSliderSound" type="HSlider" parent="GridAudio"]
margin_left = 44.0
margin_right = 144.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
max_value = 1.0
step = 0.05

[node name="MusicLabel" type="Label" parent="GridAudio"]
margin_top = 19.0
margin_right = 39.0
margin_bottom = 33.0
text = "Music"

[node name="HSliderMusic" type="HSlider" parent="GridAudio"]
margin_left = 44.0
margin_top = 18.0
margin_right = 144.0
margin_bottom = 34.0
max_value = 1.0
step = 0.05
ticks_on_borders = true

[node name="BackButton" type="Button" parent="."]
margin_left = 291.0
margin_top = 169.0
margin_right = 376.0
margin_bottom = 194.0
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}
